<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:orientation="vertical"
            android:background="@drawable/round_corner">

            <TextView
                android:id="@+id/user_added_job_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Job_details_job_title"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/user_added_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_added_job_title"
                android:text="@string/company_name"
                android:textSize="19sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/user_added_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_added_company"
                android:text="@string/company_location"
                android:textSize="19sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/user_added_salary"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_added_location"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/round_corner"
                android:backgroundTint="@color/gray"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Salary"
                android:textSize="20sp" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>