<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6E8DB"
    tools:context=".SavedJobsDetails_activity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/mainapp"
        android:titleTextColor="@color/white"
        android:title="Job Details"
        />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="663dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_savedjobdetails_job_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Job_details_job_title"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/user_savedjobdetails_company_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/user_savedjobdetails_job_title"
                android:text="@string/company_name"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/user_savedjobdetails_company_location"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/user_savedjobdetails_company_name"
                android:text="@string/company_location"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/user_savedjobdetails_jobdetails"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/user_savedjobdetails_company_location"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:text="@string/Job_details"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_savedjobdetails_salary"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/user_savedjobdetails_jobdetails"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/Salary"
                android:textSize="23sp"
                android:textColor="@color/medium_black"/>

            <TextView
                android:id="@+id/user_savedjobdetails_salaryinnumber"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@id/user_savedjobdetails_salary"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:text="This will be your salary"
                android:textSize="19sp"
                android:textColor="@color/light_black"/>

            <TextView
                android:id="@+id/user_savedjobdetails_jobtype"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/user_savedjobdetails_salaryinnumber"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/job_type"
                android:textSize="23sp"
                android:textColor="@color/medium_black"/>

            <TextView
                android:id="@+id/user_savedjobdetails_jobtype1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@id/user_savedjobdetails_jobtype"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:text="Job type requirement (Full-time)."
                android:textSize="19sp"
                android:textColor="@color/light_black"/>

            <TextView
                android:id="@+id/user_savedjobdetails_vacancy"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/user_savedjobdetails_jobtype1"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/Number_of_hires_for_this_role"
                android:textSize="23sp"
                android:textColor="@color/medium_black"/>

            <TextView
                android:id="@+id/user_savedjobdetails_vacancynumber"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@id/user_savedjobdetails_vacancy"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:text="Vacancies for this job."
                android:textSize="19sp"
                android:textColor="@color/light_black"/>

            <TextView
                android:id="@+id/user_savedjobdetails_qualification"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/user_savedjobdetails_vacancynumber"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:text="@string/Qualifications"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_savedjobdetails_qualificationdetail1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@id/user_savedjobdetails_qualification"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:text="Qualification requirement"
                android:textSize="19sp"
                android:textColor="@color/light_black"/>

            <TextView
                android:id="@+id/user_savedjobdetails_jobdescription"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/user_savedjobdetails_qualificationdetail1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:text="@string/Description"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_savedjobdetails_company_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_savedjobdetails_jobdescription"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:text="Description"
                android:textSize="19sp"
                android:textColor="@color/light_black"/>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/user_savedjobdetails_apply"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="115dp"
            android:backgroundTint="@color/mainapp"
            android:text="@string/apply_btn"
            android:textSize="25sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>